// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CDK GraphQL Transformer CDK base case 1`] = `
Object {
  "body": Object {
    "data": Object {
      "createTodo": Object {
        "description": "todo desc",
        "id": Any<String>,
      },
    },
  },
  "statusCode": 200,
}
`;

exports[`CDK GraphQL Transformer CDK base case 2`] = `
Object {
  "body": Object {
    "data": Object {
      "listTodos": Object {
        "items": Array [
          Object {
            "description": "todo desc",
            "id": "0cbe9520-df12-490a-9934-824de1227bd9",
          },
        ],
      },
    },
  },
  "statusCode": 200,
}
`;
